# GRUPA_1_ASI

./: .gitignore  README.md  environment.yml
conf/base/: catalog.yml  parameters.yml
notebooks/: 01_eda.ipynb  02_baseline_ml.ipynb
sprint-1-archive/conf/base/: catalog.yml
sprint-1-archive/notebooks/: 01_eda.ipynb  02_baseline_ml.ipynb
used-car-price-prediction/: .gitignore
used-car-price-prediction-kedro/: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml  requirements.txt
used-car-price-prediction-kedro/conf/base/: catalog.yml  parameters.yml  parameters_data_science.yml
used-car-price-prediction-kedro/data/01_raw/: used_cars_sample.csv
used-car-price-prediction-kedro/data/08_reporting/: api_predictions.db
used-car-price-prediction-kedro/docs/: model_card.md
used-car-price-prediction-kedro/docs/source/: conf.py  index.rst
used-car-price-prediction-kedro/notebooks/: 01_eda.ipynb  02_baseline_ml.ipynb
used-car-price-prediction-kedro/src/api/: deps.py  main.py  settings.py
used-car-price-prediction-kedro/src/ui/: app.py
used-car-price-prediction-kedro/src/used_car_price_prediction/: __init__.py
used-car-price-prediction-kedro/src/used_car_price_prediction/pipelines/data_science/: nodes.py  pipeline.py
used-car-price-prediction-kedro/tests/: test_api.py  test_integration.py  test_validation.py
used-car-price-prediction-kedro/tests/pipelines/data_science/: test_pipeline.py
used-car-price-prediction/conf/base/: catalog.yml
used-car-price-prediction/data/01_raw/: .gitkeep
used-car-price-prediction/src/used_car_price_prediction/: __main__.py  settings.py
used-car-price-prediction/src/used_car_price_prediction/pipelines/data_science/: df_structure.py  nodes.py  pipeline.py
